# python-greetings

./: .gitignore  README.md  example.py  setup.cfg  setup.py
.github/workflows/: python-package.yml
greetings/: __init__.py  greetings.py
hello/: __init__.py  hello.py
helloworld/: __init__.py
tests/: test_greetings.py  test_hello.py
