[metadata]
name = python-greetings
version = attr: greetings.__version__
url = https://github.com/kumattau/python-greetings
author = kumattau
author_email = kumattau@gmail.com
license_file = LICENSE
description = A greetings package for python
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:

[options.packages.find]
exclude = tests
