[metadata]
name = python-greetings
url = https://github.com/kumattau/python-greetings
license_file = LICENSE
description = A greetings for python
long_description = file: README.md
long_description_content_type = text/markdown
platform = Linux

[options]
packages = find:

[options.packages.find]
exclude = tests
