[metadata]
name = python-greetings
author = kumattau
author_email = kumattau@gmail.com
description = A greetings for python
long_description = file: README.md
long_description_content_type = text/markdown
platform = Linux
license = MIT
license_file = LICENSE
url = https://github.com/kumattau/python-greetings

[options]
packages = find:

[options.packages.find]
exclude = tests
